ROOMS-120: Fix support for Shiny theme, which introduces too much padding.

--- a/css/rooms_ui.css
+++ b/css/rooms_ui.css
@@ -67,6 +67,12 @@
   clear: both;
   margin-bottom: 20px;
 }
+.rooms-management-form .fieldset-legend,
+.rooms-management-form .fieldset-wrapper {
+  margin: 0;
+  padding: 0;
+  position: relative;
+}
 .rooms-management-form .fieldset-description {
   padding: 15px 0;
 }
